# murmur

./: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  DEPRECATED.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  review.md  vite.config.ts
docs/: wiki.md
docs/plans/: 2026-02-22-typeless-design.md  2026-02-22-typeless-implementation.md  2026-02-23-asr-params-config-design.md  2026-02-23-asr-params-config.md  2026-02-23-voice-input-interaction-design.md  2026-02-23-voice-input-waveform-plan.md  2026-02-24-llm-polish-design.md  2026-02-24-llm-polish-impl.md  2026-03-03-swift-native-rewrite-design.md  2026-03-03-swift-native-rewrite.md  2026-03-04-i18n-design.md  2026-03-04-i18n.md  2026-03-07-codex-review-fixes-round2.md  2026-03-07-codex-review-fixes.md  2026-03-08-android-design.md  2026-03-08-android-murmur-ime.md
scripts/: build-dmg.sh  bump-version.sh  gen-dmg-background.py  pre-release-test.sh  test-multi-session.mjs  test-volcengine.mjs  test_hotword_extract.py  update_hotwords.py
src/: App.css  App.tsx  DEPRECATED.md
src-android/: settings.gradle.kts
src-android/app/: build.gradle.kts
src-swift/: Info.plist  Makefile  Package.swift  murmur.entitlements  murmur.icns
src-tauri/: Cargo.toml  DEPRECATED.md  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  keyboard.rs  lib.rs  main.rs  text.rs
src/asr/: constants.ts  (+5 more)
website/: 404.html  _headers  changelog.html  index.html  llms.txt  privacy.html  robots.txt  sitemap.xml  terms.html
(+53 files in other folders)
