[package]
name = "murmur"
version = "0.1.0"
description = "Push-to-talk voice input for macOS"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "murmur_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-websocket = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
cpal = "0.15"
tokio = { version = "1", features = ["time"] }
reqwest = { version = "0.12", features = ["json"] }

